--- a/listing/templates/dashboard.html
+++ b/listing/templates/dashboard.html
@@ -19,7 +19,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="grid"><img src="{% static '/listing/images/opprtunity-dashboard.png' %}">
-         <p>{{ result.count }} matched opportunities to your investment mandate.</p>
+         <p>{{ result|length }} matched opportunities to your investment mandate.</p>
         </div>
       </div>
       
