dashboard.html instead of results.html

--- a/listing/templates/dashboard.html
+++ b/listing/templates/dashboard.html
@@ -27,7 +27,7 @@
 
 
         	<div class="row">
-            {% if opportunity or dashboard %}
+            {% if result %}
             <h1 class="col-md-12 heading-h1">Latest Opportunities</h1>
             {% endif %}
             <!--{% if mandate %}-->
