Commit on refine search

--- a/listing/templates/dashboard.html
+++ b/listing/templates/dashboard.html
@@ -5,15 +5,18 @@
 
       <!-- Icon Cards-->
     <div class="row">
-       <h1 class="col-md-12 heading-h1">Refine</h1>
-       <div class="col-md-12 refines">
-         <button>Total ticket size available</button>
-         <button>Sector</button>
-         <button>Yield</button>
-         <button>Type</button>
-         <button>Series/Stage</button>
-         <button>Class</button>
-       </div>
+
+        {% include 'refine_search.html' %}
+
+       <!--<h1 class="col-md-12 heading-h1">Refine</h1>-->
+       <!--<div class="col-md-12 refines">-->
+         <!--&lt;!&ndash;<button>Total ticket size available</button>&ndash;&gt;-->
+         <!--&lt;!&ndash;<button>Sector</button>&ndash;&gt;-->
+         <!--&lt;!&ndash;<button>Yield</button>&ndash;&gt;-->
+         <!--&lt;!&ndash;<button>Type</button>&ndash;&gt;-->
+         <!--&lt;!&ndash;<button>Series/Stage</button>&ndash;&gt;-->
+         <!--&lt;!&ndash;<button>Class</button>&ndash;&gt;-->
+       <!--</div>-->
     </div>
 
     <div class="row">
