--- a/listing/static/listing/css/sb-admin.css
+++ b/listing/static/listing/css/sb-admin.css
@@ -267,7 +267,7 @@ span.nav-item
 {
   display: inline-flex;
 }
-.refines button
+.refines button.rf-btn
 {
   float: left;
   border: 1px solid rgba(0,0,0,.125);
@@ -276,10 +276,70 @@ span.nav-item
   font-size: 13px;
   float: left;
   margin-right: 10px; 
+  cursor: pointer;
+}
+.refines button.rf-btn.select
+{
+  background-color: #000;
+  color: #fff;
+}
+.rf-apply-btn-div
+{
+  display: inline-block;
+  text-align: right;
+  width: 100%;
+}
+.rf-apply-btn-div button
+{
+  background-color: #000;
+  color: #fff;
+  font-size: 12px;
+  border: none;
+  cursor: pointer;
+}
+.rf-apply-btn-div a
+{
+  color: #000;
+  font-size: 12px;
+  border: none;
+  cursor: pointer;
+  float: left;
+}
+.rf-apply-btn-div a:hover
+{
+  text-decoration: none;
 }
 .refines
 {
   margin-bottom: 20px;
+}
+.refine-search-div
+{
+  float: left;
+  position: relative;
+}
+.refine-search-container
+{
+  position: absolute;
+  padding: 20px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  z-index: 9999;
+  box-shadow: 2px 3px 5px #ccc;
+  top: 24px;
+  width: 300px;
+  display: none;
+}
+.overlay
+{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top:140px;
+  left: 25px;
+  background-color: rgba(255,255,255,.6);
+  z-index: 999;
+  display: none;
 }
 .wid-bg
 {
