--- a/listing/templates/widget.html
+++ b/listing/templates/widget.html
@@ -13,7 +13,7 @@
           </div>
         </div>
         <div class="wid-details">
-      <h2>{{ i.company_description }}</h2>
+      <h2  title="{{ i.company_description }}">{{ i.company_description }}</h2>
       <h5>{{ i.valuation }}</h5>
       <span>{% for m in i.country.all %} {{ m }} {% if not forloop.last %}, {% endif %} {% endfor %}</span>
       <p>{{ i.company_description }}</p>
