--- a/listing/templates/financial_table.html
+++ b/listing/templates/financial_table.html
@@ -16,48 +16,48 @@
   </tr>
   <tr>
     <td>Revenue</td>
-    <td><input type="number" step="any" min="0" name="Revenue_2015A" ></td>
-    <td><input type="number" step="any" min="0" name="Revenue_2016A" ></td>
-    <td><input type="number" step="any" min="0" name="Revenue_2017A" ></td>
-    <td><input type="number" step="any" min="0" name="Revenue_2018E" ></td>
-    <td><input type="number" step="any" min="0" name="Revenue_2019E" ></td>
-    <td><input type="number" step="any" min="0" name="Revenue_2020E" ></td>
+    <td><input type="number" step="any" name="Revenue_2015A" ></td>
+    <td><input type="number" step="any" name="Revenue_2016A" ></td>
+    <td><input type="number" step="any" name="Revenue_2017A" ></td>
+    <td><input type="number" step="any" name="Revenue_2018E" ></td>
+    <td><input type="number" step="any" name="Revenue_2019E" ></td>
+    <td><input type="number" step="any" name="Revenue_2020E" ></td>
   </tr>
   <tr>
     <td>Costs</td>
-    <td><input type="number" step="any" min="0" name="Costs_2015A" ></td>
-    <td><input type="number" step="any" min="0" name="Costs_2016A" ></td>
-    <td><input type="number" step="any" min="0" name="Costs_2017A" ></td>
-    <td><input type="number" step="any" min="0" name="Costs_2018E" ></td>
-    <td><input type="number" step="any" min="0" name="Costs_2019E" ></td>
-    <td><input type="number" step="any" min="0" name="Costs_2020E" ></td>
+    <td><input type="number" step="any" name="Costs_2015A" ></td>
+    <td><input type="number" step="any" name="Costs_2016A" ></td>
+    <td><input type="number" step="any" name="Costs_2017A" ></td>
+    <td><input type="number" step="any" name="Costs_2018E" ></td>
+    <td><input type="number" step="any" name="Costs_2019E" ></td>
+    <td><input type="number" step="any" name="Costs_2020E" ></td>
   </tr>
     <tr>
     <td>EBITDA</td>
-    <td><input type="number" step="any" min="0" name="EBITDA_2015A" ></td>
-    <td><input type="number" step="any" min="0" name="EBITDA_2016A" ></td>
-    <td><input type="number" step="any" min="0" name="EBITDA_2017A" ></td>
-    <td><input type="number" step="any" min="0" name="EBITDA_2018E" ></td>
-    <td><input type="number" step="any" min="0" name="EBITDA_2019E" ></td>
-    <td><input type="number" step="any" min="0" name="EBITDA_2020E" ></td>
+    <td><input type="number" step="any" name="EBITDA_2015A" ></td>
+    <td><input type="number" step="any" name="EBITDA_2016A" ></td>
+    <td><input type="number" step="any" name="EBITDA_2017A" ></td>
+    <td><input type="number" step="any" name="EBITDA_2018E" ></td>
+    <td><input type="number" step="any" name="EBITDA_2019E" ></td>
+    <td><input type="number" step="any" name="EBITDA_2020E" ></td>
   </tr>
     <tr>
     <td>CAPEX</td>
-    <td><input type="number" step="any" min="0" name="CAPEX_2015A" ></td>
-    <td><input type="number" step="any" min="0" name="CAPEX_2016A" ></td>
-    <td><input type="number" step="any" min="0" name="CAPEX_2017A" ></td>
-    <td><input type="number" step="any" min="0" name="CAPEX_2018E" ></td>
-    <td><input type="number" step="any" min="0" name="CAPEX_2019E" ></td>
-    <td><input type="number" step="any" min="0" name="CAPEX_2020E" ></td>
+    <td><input type="number" step="any" name="CAPEX_2015A" ></td>
+    <td><input type="number" step="any" name="CAPEX_2016A" ></td>
+    <td><input type="number" step="any" name="CAPEX_2017A" ></td>
+    <td><input type="number" step="any" name="CAPEX_2018E" ></td>
+    <td><input type="number" step="any" name="CAPEX_2019E" ></td>
+    <td><input type="number" step="any" name="CAPEX_2020E" ></td>
   </tr>
     <tr>
     <td>Net Profit</td>
-    <td><input type="number" step="any" min="0" name="Net_Profit_2015A" ></td>
-    <td><input type="number" step="any" min="0" name="Net_Profit_2016A" ></td>
-    <td><input type="number" step="any" min="0" name="Net_Profit_2017A" ></td>
-    <td><input type="number" step="any" min="0" name="Net_Profit_2018E" ></td>
-    <td><input type="number" step="any" min="0" name="Net_Profit_2019E" ></td>
-    <td><input type="number" step="any" min="0" name="Net_Profit_2020E" ></td>
+    <td><input type="number" step="any" name="Net_Profit_2015A" ></td>
+    <td><input type="number" step="any" name="Net_Profit_2016A" ></td>
+    <td><input type="number" step="any" name="Net_Profit_2017A" ></td>
+    <td><input type="number" step="any" name="Net_Profit_2018E" ></td>
+    <td><input type="number" step="any" name="Net_Profit_2019E" ></td>
+    <td><input type="number" step="any" name="Net_Profit_2020E" ></td>
   </tr>
 </table>
 <br>
