--- a/listing/templates/upload.html
+++ b/listing/templates/upload.html
@@ -26,8 +26,9 @@
 
 				</div>
 
-
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.css">      
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.js"></script>
   <script>
 
 function loadCountry(geographyId, country_selected){
@@ -220,6 +221,16 @@ plugins: ['remove_button']
             <script type="text/javascript" src="{% static '/listing/js/bootstrap-multiselect.js' %}"></script>
             <script type="text/javascript">
 $(document).ready(function() {
+  var date = new Date();
+  date.setDate(date.getDate());
+  $('#id_deadline_commitment').datepicker({
+    <!--format: 'yyyy-mm-dd',-->
+      startDate: date
+  });
+  $('#id_deadline_legal').datepicker({
+    <!--format: 'yyyy-mm-dd',-->
+      startDate: date
+  });
 $('select').multiselect({
   includeSelectAllOption: true,
   selectAllValue: '0',
