Success message added on upload's

--- a/listing/templates/dashboard.html
+++ b/listing/templates/dashboard.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+
+{% if messages %}
+    {% for msg in messages %}
+        <div class="alert alert-{{msg.level_tag}}" role="alert">
+        {{msg.message}}
+        </div>
+    {% endfor %}
+{% endif %}
+
       <!-- Breadcrumbs-->
 
       <!-- Icon Cards-->
