--- a/listing/templates/refine_search.html
+++ b/listing/templates/refine_search.html
@@ -76,8 +76,8 @@
       {
         $(".overlay").hide();
         $(".refine-search-container").hide();
-        $(".rf-btn").removeClass("select");
-        $(".refine-search-container input").prop("checked", false);
+        $(this).parent().parent().parent().find(".rf-btn").removeClass("select");
+        $(this).parent().parent().parent().find(".refine-search-container input").prop("checked", false);
         $(".rf-apply-btn").click();
       })
     })
