--- a/listing/templates/upload.html
+++ b/listing/templates/upload.html
@@ -3,7 +3,7 @@
 {% block content %}
         	<div class="row">
 		        <div class="col-xl-6	 col-sm-8 mb-3">
-		          <div class="text-dark bg-white o-hidden h-100">
+		          <div class="text-dark bg-white h-100">
 							<form action="" method="post" class="listing" enctype="multipart/form-data">
 							    {% csrf_token %}
 								{% if opportunity %}
