Logo change - login page

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,7 +9,8 @@
      }
 </style>
 <div class="loginmodal-container" style="margin-top:50px; text-align:center">
-    <a class="" href="/" style="background:#000; width:100%; display:inline-block; margin-bottom:20px;"><img src="{% static '/listing/images/large-logo.png' %}"></a>
+    <a class="" href="/" style="background:#000; width:100%; display:inline-block; margin-bottom:20px;">
+        <img src="{% static '/listing/images/we_raise_logo.png' %}" style="margin-bottom:20px; width:190px; height:42px;"  ></a>
 	<form method="post" class="refines">
 
     {% csrf_token %}
