--- a/listing/templates/upload.html
+++ b/listing/templates/upload.html
@@ -8,15 +8,61 @@
 							    {% csrf_token %}
 								{% if opportunity %}
 								<h4 class="heading-h1">Fund Seeker Opportunity Upload</h4>
+								<label class="required">Compulsory fields marked with</label>
+								<br>
+								<p><label class="required">{{ form.company_description.label }}:</label> {{ form.company_description }}</p>
+								<p><label class="required">{{ form.opportunity_created.label }}:</label> {{ form.opportunity_created }}</p>
+								<p><label>{{ form.selling_by.label }}:</label> {{ form.selling_by }}</p>
+								<p><label>{{ form.competitors.label }}:</label> {{ form.competitors }}</p>
+								<p><label class="required">{{ form.valuation.label }}:</label> {{ form.valuation }}</p>
+								<p><label class="required">{{ form.valuation_text.label }}:</label> {{ form.valuation_text }}</p>
+								<p><label class="required">{{ form.amount_invested.label }}:</label> {{ form.amount_invested }}</p>
+								<p><label class="required">{{ form.ownership_structure.label }}:</label> {{ form.ownership_structure }}</p>
+								<p><label class="required">{{ form.ebitda.label }}:</label> {{ form.ebitda }}</p>
+								<p><label>{{ form.break_even_year.label }}:</label> {{ form.break_even_year }}</p>
+								<p><label>{{ form.est_payback.label }}:</label> {{ form.est_payback }}</p>
+								<p><label class="required">{{ form.size_ticket_total.label }}:</label> {{ form.size_ticket_total }}</p>
+								<p><label class="required">{{ form.geography.label }}:</label> {{ form.geography }}</p>
+								<p><label class="required">{{ form.country.label }}:</label> {{ form.country }}</p>
+								<p><label class="required">{{ form.sector.label }}:</label> {{ form.sector }}</p>
+								<p><label class="required">{{ form.sub_sector.label }}:</label> {{ form.sub_sector }}</p>
+								<p><label class="required">{{ form.yield_select.label }}:</label> {{ form.yield_select }}</p>
+								<p><label class="required">{{ form.return_estimate.label }}:</label> {{ form.return_estimate }}</p>
+								<p><label class="required">{{ form.growth_expectation_year1.label }}:</label> {{ form.growth_expectation_year1 }}</p>
+								<p><label class="required">{{ form.growth_expectation_year2.label }}:</label> {{ form.growth_expectation_year2 }}</p>
+								<p><label class="required">{{ form.growth_expectation_year3.label }}:</label> {{ form.growth_expectation_year3 }}</p>
+								<p><label class="required">{{ form.class_select.label }}:</label> {{ form.class_select }}</p>
+								<p><label class="required">{{ form.series_stage.label }}:</label> {{ form.series_stage }}</p>
+								<p><label class="required">{{ form.investor_required.label }}:</label> {{ form.investor_required }}</p>
+								<p><label>{{ form.amount_lead_partner.label }}:</label> {{ form.amount_lead_partner }}</p>
+								<p><label>{{ form.amount_other_partner.label }}:</label> {{ form.amount_other_partner }}</p>
+								<p><label>{{ form.amount_weraise.label }}:</label> {{ form.amount_weraise }}</p>
+								<p><label class="required">{{ form.investment_offered.label }}:</label> {{ form.investment_offered }}</p>
+								<p><label>{{ form.offer.label }}:</label> {{ form.offer }}</p>
+								<p><label>{{ form.special_situation.label }}:</label> {{ form.special_situation }}</p>
+								<p><label class="required">{{ form.financials.label }}:</label> {{ form.financials }}</p>
+								<label class="required" >High Level Financial's </label>
+								{% include 'financial_table.html' %}
+								<p><label>{{ form.estimated_irr.label }}:</label> {{ form.estimated_irr }}</p>
+								<p><label>{{ form.exit_timing.label }}:</label> {{ form.exit_timing }}</p>
+								<p><label class="required">{{ form.use_of_funds.label }}:</label> {{ form.use_of_funds }}</p>
+								<p><label class="required">{{ form.deadline_commitment.label }}:</label> {{ form.deadline_commitment }}</p>
+								<p><label class="required">{{ form.deadline_legal.label }}:</label> {{ form.deadline_legal }}</p>
+								<p><label class="required">{{ form.proposed_process.label }}:</label> {{ form.proposed_process }}</p>
+								<p><label class="required">{{ form.proposed_exit.label }}:</label> {{ form.proposed_exit }}</p>
+								<p><label>{{ form.financial_statements.label }}:</label> {{ form.financial_statements }}</p>
+								<p><label>{{ form.financial_model.label }}:</label> {{ form.financial_model }}</p>
+								<p><label>{{ form.investor_deck.label }}:</label> {{ form.investor_deck }}</p>
+								<p><label>{{ form.company_bio.label }}:</label> {{ form.company_bio }}</p>
+								<p><label>{{ form.ceo_bio.label }}:</label> {{ form.ceo_bio }}</p>
+								<!--<p><label>{{ form..label }}:</label> {{ form. }}</p>-->
+
 								{% elif mandate %}
 								<h4 class="heading-h1">Investor Mandate Upload</h4>
-								{% endif %}
 								<label class="required">Compulsory fields marked with</label>
-							    {{ form.as_p }}
-								{% if opportunity %}
-								<label style="width: 100%">High Level Financial's</label>
-								{% include 'financial_table.html' %}
+								{{ form.as_p }}
 								{% endif %}
+
                   <div style="width: 100%;float: left;">
                      <input type="submit" value="Upload">
                   </div>
