--- a/listing/static/listing/css/sb-admin.css
+++ b/listing/static/listing/css/sb-admin.css
@@ -1307,3 +1307,15 @@ footer.sticky-footer {
 .login-help{
   font-size: 12px;
 }
+input.red-border[required]
+{
+    border: 1px solid rgba(255,0,0,.5) ;
+    box-shadow: 0px 0px 1px 1px rgba(255,0,0,.5);
+
+}
+.required .btn-group.red-border
+{
+    border: 1px solid rgba(255,0,0,.5) ;
+    box-shadow: 0px 0px 1px 1px rgba(255,0,0,.5);
+
+}
