Error box - select color removed

--- a/listing/static/listing/css/sb-admin.css
+++ b/listing/static/listing/css/sb-admin.css
@@ -681,6 +681,7 @@ top:-2px;
     border-radius: .25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     font-size: 13px;
+    outline:none;
 }
 .listing select
 {
