Error box - Multiselect color removed

--- a/listing/static/listing/css/sb-admin.css
+++ b/listing/static/listing/css/sb-admin.css
@@ -511,6 +511,7 @@ span.nav-item
   width: 100%!important;
   text-align: left;
   outline: none;
+  box-shadow:none;
 }
 .listing p .dropdown-toggle::after
 {
