--- a/listing/templates/upload.html
+++ b/listing/templates/upload.html
@@ -272,26 +272,43 @@ $(document).ready(function() {
 
 $(".submit").click(function()
 {
-		$('.listing input').each(function(){
-    if($(this).val() == '' )
-    {
-       $(this).addClass("red-border");
-       }
-    else
-    {
-		$(this).removeClass("red-border");
+
+	if($('.listing .required input').val() == '' || $('.listing .required select').val() == '' )
+		{
+		  $(".submit").prop('disabled', false);
+
 		}
-});
-$('.listing select').each(function(){
-    if($(this).val() == '' )
-    {
-       $(this).parent().find(".btn-group").addClass("red-border");
-       }
-    else
-    {
-		$(this).parent().find(".btn-group").removeClass("red-border");
+		else
+		{
+			$(".submit").prop('disabled', true);
+      $('.listing').submit();
+
+
 		}
-});
+
+	$('.listing .required input').each(function(){
+		if($(this).val() == '' )
+		{
+		   $(this).addClass("red-border");
+
+		}
+		else
+		{
+			$(this).removeClass("red-border");
+		}
+	});
+	$('.listing .required select').each(function(){
+		if($(this).val() == '' )
+		{
+
+		   $(this).parent().find(".btn-group").addClass("red-border");
+
+		   }
+		else
+		{
+			$(this).parent().find(".btn-group").removeClass("red-border");
+			}
+	});
 });
   var date = new Date();
   date.setDate(date.getDate());
